# openmatch

./: .gitignore  Cargo.toml  README.md
.prompt/: A1-cli.md  B1-deployment.md  C1-types.md  C2-core.md  C3-epoch.md  C4-escrow.md  C5-settlement.md  C6-receipt.md  C7-gossip.md  C8-api.md  C9-persistence.md  G0-workspace.md  N1-market.md  N2-agent.md  S1-contracts.md  S2-sdk.md  SECURITY-fraud-protection.md  T1-testing.md
crates/openmatch-core/: Cargo.toml
crates/openmatch-core/src/: balance_manager.rs  batch_matcher.rs  clearing.rs  lib.rs  orderbook.rs  pending_buffer.rs  price_level.rs  security.rs
crates/openmatch-core/tests/: integration_determinism.rs  integration_full_cycle.rs  integration_security.rs
crates/openmatch-ingress/: Cargo.toml
crates/openmatch-ingress/src/: balance_manager.rs  batch_sealer.rs  escrow.rs  lib.rs  pending_buffer.rs  risk_kernel.rs
crates/openmatch-matchcore/: Cargo.toml
crates/openmatch-matchcore/src/: clearing.rs  determinism.rs  lib.rs  matcher.rs  orderbook.rs  price_level.rs
crates/openmatch-settlement/: Cargo.toml
crates/openmatch-settlement/src/: idempotency.rs  lib.rs  supply_conservation.rs  tier1.rs  withdraw_lock.rs
crates/openmatch-settlement/tests/: end_to_end.rs
crates/openmatch-types/: Cargo.toml
crates/openmatch-types/src/: balance.rs  config.rs  constants.rs  epoch.rs  error.rs  freeze.rs  ids.rs  lib.rs  order.rs  receipt.rs  risk.rs  spend_right.rs  trade.rs
docs/: 00-ARCHITECTURE-DESIGN.md  OpenMatch-HLD.md  getting-started.md
