[workspace]
members = [
    "crates/openmatch-types",
    "crates/openmatch-matchcore",
    "crates/openmatch-ingress",
    "crates/openmatch-settlement",
    # --- Legacy v0.1 (retained for reference, excluded from build) ---
    # "crates/openmatch-core",
    # --- Future crates ---
    # "crates/openmatch-gossip",
    # "crates/openmatch-api",
    # "crates/openmatch-persistence",
    # "crates/openmatch-risk-bus",
    # "crates/openmatch-cli",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openibank/OpenMatch"
authors = ["OpenMatch Contributors"]
description = "Three-plane epoch-based matching engine: Security Envelope + MatchCore + Finality"

[workspace.dependencies]
# --- Internal crates ---
openmatch-types         = { path = "crates/openmatch-types" }
openmatch-matchcore     = { path = "crates/openmatch-matchcore" }
openmatch-ingress       = { path = "crates/openmatch-ingress" }
openmatch-settlement    = { path = "crates/openmatch-settlement" }

# --- External dependencies (pinned) ---
tokio              = { version = "1.43", features = ["full"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
rust_decimal       = { version = "1.36", features = ["serde-with-str"] }
ed25519-dalek      = { version = "2.1", features = ["serde", "rand_core"] }
uuid               = { version = "1.11", features = ["v7", "serde"] }
thiserror          = "2.0"
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2               = "0.10"
hex                = "0.4"
rand               = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.bench]
lto = true
codegen-units = 1
