[package]
name = "openmatch-matchcore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Pure deterministic matching engine — zero side effects, maximum throughput"
license.workspace = true
repository.workspace = true

[features]
default = []
test-helpers = ["openmatch-types/test-helpers"]

[dependencies]
openmatch-types.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
openmatch-types = { workspace = true, features = ["test-helpers"] }

[lints]
workspace = true
