[package]
name = "openmatch-settlement"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Finality Plane: settlement, SR consumption, receipts, evidence"
license.workspace = true
repository.workspace = true

[features]
default = []
test-helpers = ["openmatch-types/test-helpers"]

[dependencies]
openmatch-types.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
rand.workspace = true
openmatch-types = { workspace = true, features = ["test-helpers"] }
openmatch-ingress = { workspace = true }
openmatch-matchcore = { workspace = true }

[lints]
workspace = true
