[package]
name = "openmatch-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared types for the OpenMatch three-plane matching engine"
license.workspace = true
repository.workspace = true

[features]
default = []
test-helpers = ["rand"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
ed25519-dalek.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
rand = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
